--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -13,9 +13,11 @@
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.10.0",
     "lucide-react": "^0.523.0",
+    "pdfjs-dist": "^5.4.149",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-pdf": "^10.1.0",
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
