--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -19,7 +19,9 @@
     "react-icons": "^5.5.0",
     "react-pdf": "^10.1.0",
     "react-router-dom": "^7.6.2",
-    "recharts": "^3.1.2"
+    "react-slick": "^0.31.0",
+    "recharts": "^3.1.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
