--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -109,7 +109,7 @@
 </dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>d
+			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 
