--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 ## MySQL datasource
-#spring.datasource.username=root
-#spring.datasource.password=admin
-#spring.datasource.url=jdbc:mysql://localhost:3306/research
+#spring.datasource.username=<your username>
+#spring.datasource.password=<youtpassword>
+#spring.datasource.url=jdbc:mysql://localhost:3306/<db name>
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #
 ## JPA / Hibernate
@@ -9,6 +9,6 @@
 #spring.jpa.show-sql=true
 #
 ## File upload paths
-#uploads.iteration=C:\\Users\\GANESH\\OneDrive\\Desktop\\BootProjects\\final year project\\backend\\Uploads\\iteration
-#uploads.assignment=C:\\Users\\GANESH\\OneDrive\\Desktop\\BootProjects\\final year project\\backend\\Uploads\\assignment
-#uploads.feedback=C:\\Users\\GANESH\\OneDrive\\Desktop\\BootProjects\\final year project\\backend\\Uploads\\feedback
+#uploads.iteration=C:\\Users\\GANESH\\OneDrive\\Desktop\\BootProjects\\final year project\\backend\\Uploads\\< create dir iteration>
+#uploads.assignment=C:\\Users\\GANESH\\OneDrive\\Desktop\\BootProjects\\final year project\\backend\\Uploads\\< create dir assignment>
+#uploads.feedback=C:\\Users\\GANESH\\OneDrive\\Desktop\\BootProjects\\final year project\\backend\\Uploads\\< create dir feedback>
